[package]
name = "mtg-proxy-creator-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
futures = "0.3.30"
image = "0.24.7"
printpdf = { version = "0.5.0", features = ["embedded_images"] }
urlencoding = "2.0"
rfd = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
iced = "0.13.1"
